Bug 331746 - Umbrello crashed after open file containing Chinese
Summary: Umbrello crashed after open file containing Chinese
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.11.5
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2014-03-04 21:15 UTC by lovedragonchina
Modified: 2014-03-05 14:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.3
Sentry Crash Report:


Attachments
test mdi file (145.46 KB, application/octet-stream)
2014-03-04 23:16 UTC, lovedragonchina
Details

Note You need to log in before you can comment on or make changes to this bug.
Description lovedragonchina 2014-03-04 21:15:20 UTC
Application: umbrello (2.11.5)
KDE Platform Version: 4.11.5
Qt Version: 4.8.4
Operating System: Linux 3.11.0-17-generic x86_64
Distribution: Ubuntu 13.10

-- Information about the crash:
- What I was doing when the application crashed:
  Open a rational rose file(.mdl), which containing Chinese. Then click views including Chinese. Umbrello will exit automatically.
- Custom settings of the application:
  No special settings.

The crash can be reproduced every time.

-- Backtrace:
Application: Umbrello UML Modeller (umbrello), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f441c32e7c0 (LWP 5955))]

Thread 4 (Thread 0x7f440b156700 (LWP 5958)):
#0  0x00007f4418827f7d in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f441557d6a4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f441557db0a in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f440f90bb66 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007f44155a20f5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f4415a42f6e in start_thread (arg=0x7f440b156700) at pthread_create.c:311
#6  0x00007f44188349cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 3 (Thread 0x7f440a03a700 (LWP 5959)):
#0  0x00007f44188266bd in read () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f44155bc670 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f441557d1cc in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f441557d63b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f441557d7ac in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f441557d7f9 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f44155a20f5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007f4415a42f6e in start_thread (arg=0x7f440a03a700) at pthread_create.c:311
#8  0x00007f44188349cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 2 (Thread 0x7f4409038700 (LWP 5980)):
#0  0x00007f44155bd3d1 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f441557d119 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f441557d63b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f441557d7ac in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f441a179a76 in QEventDispatcherGlib::processEvents (this=0x7f43fc001390, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#5  0x00007f441a14b5ef in QEventLoop::processEvents (this=this@entry=0x7f4409037d70, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f441a14b8e5 in QEventLoop::exec (this=this@entry=0x7f4409037d70, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007f441a04a88f in QThread::exec (this=this@entry=0x1643110) at thread/qthread.cpp:542
#8  0x00007f441a12cd13 in QInotifyFileSystemWatcherEngine::run (this=0x1643110) at io/qfilesystemwatcher_inotify.cpp:265
#9  0x00007f441a04cf2f in QThreadPrivate::start (arg=0x1643110) at thread/qthread_unix.cpp:338
#10 0x00007f4415a42f6e in start_thread (arg=0x7f4409038700) at pthread_create.c:311
#11 0x00007f44188349cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 1 (Thread 0x7f441c32e7c0 (LWP 5955)):
[KCrash Handler]
#6  operator QGraphicsScene* (this=<error reading variable: Cannot access memory at address 0x8>) at ../../include/QtCore/../../src/corelib/kernel/qpointer.h:78
#7  QGraphicsView::scene (this=0x0) at graphicsview/qgraphicsview.cpp:1592
#8  0x000000000079bc45 in UMLView::umlScene (this=<optimized out>) at ../../umbrello/umlview.cpp:60
#9  0x00000000007651d9 in UMLListView::mousePressEvent (this=0x138f6b0, me=0x7fffe2d369d0) at ../../umbrello/umllistview.cpp:216
#10 0x00007f4419539191 in QWidget::event (this=this@entry=0x138f6b0, event=event@entry=0x7fffe2d369d0) at kernel/qwidget.cpp:8371
#11 0x00007f44198da5be in QFrame::event (this=0x138f6b0, e=0x7fffe2d369d0) at widgets/qframe.cpp:557
#12 0x00007f44199e96b3 in QAbstractItemView::viewportEvent (this=this@entry=0x138f6b0, event=event@entry=0x7fffe2d369d0) at itemviews/qabstractitemview.cpp:1644
#13 0x00007f4419a2850e in QTreeView::viewportEvent (this=0x138f6b0, event=0x7fffe2d369d0) at itemviews/qtreeview.cpp:1257
#14 0x00007f441a14ca26 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=this@entry=0xd8fb90, receiver=receiver@entry=0x138f370, event=event@entry=0x7fffe2d369d0) at kernel/qcoreapplication.cpp:1056
#15 0x00007f44194e9ddc in QApplicationPrivate::notify_helper (this=this@entry=0xd8fb90, receiver=receiver@entry=0x138f370, e=e@entry=0x7fffe2d369d0) at kernel/qapplication.cpp:4563
#16 0x00007f44194f05ad in QApplication::notify (this=this@entry=0x7fffe2d373c0, receiver=receiver@entry=0x138f370, e=e@entry=0x7fffe2d369d0) at kernel/qapplication.cpp:4110
#17 0x00007f441adeca6a in KApplication::notify (this=0x7fffe2d373c0, receiver=0x138f370, event=0x7fffe2d369d0) at ../../kdeui/kernel/kapplication.cpp:311
#18 0x00007f441a14c8bd in QCoreApplication::notifyInternal (this=0x7fffe2d373c0, receiver=receiver@entry=0x138f370, event=event@entry=0x7fffe2d369d0) at kernel/qcoreapplication.cpp:946
#19 0x00007f44194efd63 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#20 QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x138f370, event=event@entry=0x7fffe2d369d0, alienWidget=alienWidget@entry=0x138f370, nativeWidget=nativeWidget@entry=0x138ac40, buttonDown=buttonDown@entry=0x7f4419fce2f8 <qt_button_down>, lastMouseReceiver=..., spontaneous=spontaneous@entry=true) at kernel/qapplication.cpp:3178
#21 0x00007f44195647db in QETWidget::translateMouseEvent (this=this@entry=0x138ac40, event=event@entry=0x7fffe2d36d50) at kernel/qapplication_x11.cpp:4631
#22 0x00007f4419564079 in QApplication::x11ProcessEvent (this=0x7fffe2d373c0, event=event@entry=0x7fffe2d36d50) at kernel/qapplication_x11.cpp:3624
#23 0x00007f441958b922 in x11EventSourceDispatch (s=0xd90780, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#24 0x00007f441557d3b6 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#25 0x00007f441557d708 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#26 0x00007f441557d7ac in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007f441a179a55 in QEventDispatcherGlib::processEvents (this=0xd8f250, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#28 0x00007f441958b9d6 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#29 0x00007f441a14b5ef in QEventLoop::processEvents (this=this@entry=0x7fffe2d37130, flags=...) at kernel/qeventloop.cpp:149
#30 0x00007f441a14b8e5 in QEventLoop::exec (this=this@entry=0x7fffe2d37130, flags=...) at kernel/qeventloop.cpp:204
#31 0x00007f441a150e5b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#32 0x00007f44194e834c in QApplication::exec () at kernel/qapplication.cpp:3828
#33 0x00000000004380bb in main (argc=<optimized out>, argv=<optimized out>) at ../../umbrello/main.cpp:113

Possible duplicates by query: bug 318916.

Reported using DrKonqi
Comment 1 Ralf Habacker 2014-03-04 22:34:20 UTC
From the backtrace I can see that you clicked on a diagram entry in the Tree View, for which no graphics scene has been created, so it looks like an import issue. 
Any chance to get a related  test case mdl file ?
Comment 2 lovedragonchina 2014-03-04 23:16:17 UTC
Created attachment 85418 [details]
test mdi file

a related  test case mdl file
Comment 3 Ralf Habacker 2014-03-05 14:22:39 UTC
The problem is that umbrello expects to have to least one class diagram in a new document.
Comment 4 Ralf Habacker 2014-03-05 14:24:51 UTC
Git commit 0460ab0d5d92d63d1c9f4035caaee5349af4480d by Ralf Habacker.
Committed on 05/03/2014 at 14:23.
Pushed by habacker into branch 'master'.

Fix crash after importing rational rose file.

M  +7    -0    umbrello/umldoc.cpp

http://commits.kde.org/umbrello/0460ab0d5d92d63d1c9f4035caaee5349af4480d
Comment 5 Ralf Habacker 2014-03-05 14:26:33 UTC
Git commit f91f0680ab550f1ec31fb415e7b28a8213469261 by Ralf Habacker.
Committed on 05/03/2014 at 14:23.
Pushed by habacker into branch 'KDE/4.13'.

Fix crash after importing rational rose file.
FIXED-IN:4.13.0
(cherry picked from commit 0460ab0d5d92d63d1c9f4035caaee5349af4480d)

M  +7    -0    umbrello/umldoc.cpp

http://commits.kde.org/umbrello/f91f0680ab550f1ec31fb415e7b28a8213469261
Comment 6 Ralf Habacker 2014-03-05 14:27:20 UTC
Git commit e597f6bf516eee7db4105c45a1122d0bccbb4a31 by Ralf Habacker.
Committed on 05/03/2014 at 14:23.
Pushed by habacker into branch 'KDE/4.12'.

Fix crash after importing rational rose file.
FIXED-IN:4.12.3
(cherry picked from commit 0460ab0d5d92d63d1c9f4035caaee5349af4480d)

M  +7    -0    umbrello/umldoc.cpp

http://commits.kde.org/umbrello/e597f6bf516eee7db4105c45a1122d0bccbb4a31