Fix crash after importing rational rose file.

BUG:331746
FIXED-IN:4.12.3
(cherry picked from commit 0460ab0d5d92d63d1c9f4035caaee5349af4480d)