umbrello/umldoc.cpp
@@ -536,6 +536,13 @@ bool UMLDoc::openDocument(const KUrl& url, const char* format /* =0 */)
         }
         if (filetype.endsWith(QLatin1String(".mdl"))) {
             status = Import_Rose::loadFromMDL(file);
+            if (status) {
+                QString name = createDiagramName(Uml::DiagramType::Class, false);
+                createDiagram(m_root[Uml::ModelType::Logical], Uml::DiagramType::Class, name);
+                m_pCurrentRoot = m_root[Uml::ModelType::Logical];
+            }
+            else
+                newDocument();
         }
         else {
             status = loadFromXMI(file, ENC_UNKNOWN);
